--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# ───── dependencies ─────
 /node_modules
 /.pnp
 .pnp.*
@@ -10,32 +10,48 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# ───── testing ─────
 /coverage
 
-# next.js
+# ───── next.js ─────
 /.next/
 /out/
 
-# production
+# ───── production builds ─────
 /build
 
-# misc
+# ───── misc ─────
 .DS_Store
+Thumbs.db
 *.pem
 
-# debug
+# ───── debug logs ─────
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
-# env files (can opt-in for committing if needed)
-.env*
+# ───── env files (secrets) ─────
+.env
+.env.*
+!.env.example
 
-# vercel
+# ───── vercel ─────
 .vercel
 
-# typescript
+# ───── typescript ─────
 *.tsbuildinfo
 next-env.d.ts
+
+# ───── editors / IDE ─────
+.vscode/
+.idea/
+*.code-workspace
+
+# ───── turbo / build cache ─────
+.turbo
+.turbo/
+
+# ───── docker extras (opcional) ─────
+docker-compose.override.yml
